--- a/rep_stm32.ioc
+++ b/rep_stm32.ioc
@@ -1,5 +1,5 @@
 #MicroXplorer Configuration settings - do not modify
-#Sun Nov 09 18:47:26 FET 2014
+#Sun Nov 09 21:06:29 FET 2014
 File.Version=1
 KeepUserPlacement=false
 Mcu.Family=STM32F1
@@ -44,54 +44,55 @@ Mcu.Pin29=PE11
 Mcu.Pin3=PE5
 Mcu.Pin30=PB10
 Mcu.Pin31=PB11
-Mcu.Pin32=PB15
-Mcu.Pin33=PD8
-Mcu.Pin34=PD9
-Mcu.Pin35=PD10
-Mcu.Pin36=PD11
-Mcu.Pin37=PD12
-Mcu.Pin38=PD13
-Mcu.Pin39=PD14
+Mcu.Pin32=PB14
+Mcu.Pin33=PB15
+Mcu.Pin34=PD8
+Mcu.Pin35=PD9
+Mcu.Pin36=PD10
+Mcu.Pin37=PD11
+Mcu.Pin38=PD12
+Mcu.Pin39=PD13
 Mcu.Pin4=PE6
-Mcu.Pin40=PD15
-Mcu.Pin41=PC6
-Mcu.Pin42=PC7
-Mcu.Pin43=PC8
-Mcu.Pin44=PC9
-Mcu.Pin45=PA8
-Mcu.Pin46=PA9
-Mcu.Pin47=PA10
-Mcu.Pin48=PA11
-Mcu.Pin49=PA12
+Mcu.Pin40=PD14
+Mcu.Pin41=PD15
+Mcu.Pin42=PC6
+Mcu.Pin43=PC7
+Mcu.Pin44=PC8
+Mcu.Pin45=PC9
+Mcu.Pin46=PA8
+Mcu.Pin47=PA9
+Mcu.Pin48=PA10
+Mcu.Pin49=PA11
 Mcu.Pin5=PC13-TAMPER-RTC
-Mcu.Pin50=PA13
-Mcu.Pin51=PA14
-Mcu.Pin52=PA15
-Mcu.Pin53=PC10
-Mcu.Pin54=PC11
-Mcu.Pin55=PC12
-Mcu.Pin56=PD0
-Mcu.Pin57=PD1
-Mcu.Pin58=PD2
-Mcu.Pin59=PD3
+Mcu.Pin50=PA12
+Mcu.Pin51=PA13
+Mcu.Pin52=PA14
+Mcu.Pin53=PA15
+Mcu.Pin54=PC10
+Mcu.Pin55=PC11
+Mcu.Pin56=PC12
+Mcu.Pin57=PD0
+Mcu.Pin58=PD1
+Mcu.Pin59=PD2
 Mcu.Pin6=PC14-OSC32_IN
-Mcu.Pin60=PD4
-Mcu.Pin61=PD5
-Mcu.Pin62=PD6
-Mcu.Pin63=PD7
-Mcu.Pin64=PB3
-Mcu.Pin65=PB4
-Mcu.Pin66=PB5
-Mcu.Pin67=PB6
-Mcu.Pin68=PB7
-Mcu.Pin69=PB8
+Mcu.Pin60=PD3
+Mcu.Pin61=PD4
+Mcu.Pin62=PD5
+Mcu.Pin63=PD6
+Mcu.Pin64=PD7
+Mcu.Pin65=PB3
+Mcu.Pin66=PB4
+Mcu.Pin67=PB5
+Mcu.Pin68=PB6
+Mcu.Pin69=PB7
 Mcu.Pin7=PC15-OSC32_OUT
-Mcu.Pin70=PB9
-Mcu.Pin71=PE0
-Mcu.Pin72=PE1
+Mcu.Pin70=PB8
+Mcu.Pin71=PB9
+Mcu.Pin72=PE0
+Mcu.Pin73=PE1
 Mcu.Pin8=PC0
 Mcu.Pin9=PC1
-Mcu.PinsNb=73
+Mcu.PinsNb=74
 Mcu.UserName=STM32F103VETx
 PA0-WKUP.GPIOParameters=GPIO_Label,GPIO_Mode
 PA0-WKUP.GPIO_Label=AIN 1
@@ -134,19 +135,16 @@ PA15.GPIO_Speed=GPIO_Speed_2MHz
 PA15.Locked=true
 PA15.Mode=Encoder-Interface
 PA15.Signal=TIM2_CH1_ETR
-PA2.GPIOParameters=GPIO_Label,GPIO_Mode
-PA2.GPIO_Label=AIN 3
-PA2.GPIO_Mode=GPIO_Mode_AIN
-PA2.Mode=IN2
-PA2.Signal=ADC1_IN2
-PA3.GPIOParameters=GPIO_Label,GPIO_Mode
-PA3.GPIO_Label=AIN 4
-PA3.GPIO_Mode=GPIO_Mode_AIN
-PA3.Mode=IN3
-PA3.Signal=ADC1_IN3
-PA4.GPIOParameters=GPIO_Label,GPIO_Mode
-PA4.GPIO_Label=AIN 5
-PA4.GPIO_Mode=GPIO_Mode_AIN
+PA2.GPIOParameters=GPIO_Speed,GPIO_Mode
+PA2.GPIO_Mode=GPIO_Mode_Out_PP
+PA2.GPIO_Speed=GPIO_Speed_2MHz
+PA2.Locked=true
+PA2.Signal=GPIO_Output
+PA3.GPIOParameters=GPIO_Speed,GPIO_Mode
+PA3.GPIO_Mode=GPIO_Mode_Out_PP
+PA3.GPIO_Speed=GPIO_Speed_2MHz
+PA3.Locked=true
+PA3.Signal=GPIO_Output
 PA4.Mode=IN4
 PA4.Signal=ADC2_IN4
 PA5.GPIOParameters=GPIO_Label,GPIO_Mode
@@ -154,16 +152,16 @@ PA5.GPIO_Label=AIN 6
 PA5.GPIO_Mode=GPIO_Mode_AIN
 PA5.Mode=IN5
 PA5.Signal=ADC2_IN5
-PA6.GPIOParameters=GPIO_Label,GPIO_Mode
-PA6.GPIO_Label=AIN 7
-PA6.GPIO_Mode=GPIO_Mode_AIN
-PA6.Mode=IN6
-PA6.Signal=ADC2_IN6
-PA7.GPIOParameters=GPIO_Label,GPIO_Mode
-PA7.GPIO_Label=AIN 8
-PA7.GPIO_Mode=GPIO_Mode_AIN
-PA7.Mode=IN7
-PA7.Signal=ADC2_IN7
+PA6.GPIOParameters=GPIO_Speed,GPIO_Mode
+PA6.GPIO_Mode=GPIO_Mode_Out_PP
+PA6.GPIO_Speed=GPIO_Speed_2MHz
+PA6.Locked=true
+PA6.Signal=GPIO_Output
+PA7.GPIOParameters=GPIO_Speed,GPIO_Mode
+PA7.GPIO_Mode=GPIO_Mode_Out_PP
+PA7.GPIO_Speed=GPIO_Speed_2MHz
+PA7.Locked=true
+PA7.Signal=GPIO_Output
 PA8.GPIOParameters=GPIO_Speed,GPIO_Label,GPIO_Mode
 PA8.GPIO_Label=Encoder 1, A
 PA8.GPIO_Mode=
@@ -202,6 +200,12 @@ PB11.GPIO_Mode=
 PB11.GPIO_Speed=GPIO_Speed_2MHz
 PB11.Mode=Asynchronous
 PB11.Signal=USART3_RX
+PB14.GPIOParameters=GPIO_Speed,GPIO_Label,GPIO_Mode
+PB14.GPIO_Label=USB Enable
+PB14.GPIO_Mode=GPIO_Mode_Out_PP
+PB14.GPIO_Speed=GPIO_Speed_2MHz
+PB14.Locked=true
+PB14.Signal=GPIO_Output
 PB15.GPIOParameters=GPIO_Speed,GPIO_Label,GPIO_Mode
 PB15.GPIO_Label=Drive 5, Step
 PB15.GPIO_Mode=GPIO_Mode_Out_PP
@@ -283,15 +287,15 @@ PC14-OSC32_IN.Signal=SYS_OSC32_IN
 PC15-OSC32_OUT.Locked=true
 PC15-OSC32_OUT.Signal=SYS_OSC32_OUT
 PC2.GPIOParameters=GPIO_Label,GPIO_Mode
-PC2.GPIO_Label=AIN 11
-PC2.GPIO_Mode=GPIO_Mode_AIN
-PC2.Mode=IN12
-PC2.Signal=ADC3_IN12
+PC2.GPIO_Label=IN7
+PC2.GPIO_Mode=GPIO_Mode_IPU
+PC2.Locked=true
+PC2.Signal=GPIO_Input
 PC3.GPIOParameters=GPIO_Label,GPIO_Mode
-PC3.GPIO_Label=AIN 12
-PC3.GPIO_Mode=GPIO_Mode_AIN
-PC3.Mode=IN13
-PC3.Signal=ADC3_IN13
+PC3.GPIO_Label=IN8
+PC3.GPIO_Mode=GPIO_Mode_IPU
+PC3.Locked=true
+PC3.Signal=GPIO_Input
 PC4.GPIOParameters=GPIO_Speed,GPIO_Label,GPIO_Mode
 PC4.GPIO_Label=Drive 1, Dir
 PC4.GPIO_Mode=GPIO_Mode_Out_PP
