--- a/rep_stm32.ioc
+++ b/rep_stm32.ioc
@@ -1,5 +1,5 @@
 #MicroXplorer Configuration settings - do not modify
-#Sun Nov 09 21:06:29 FET 2014
+#Mon Nov 10 08:49:31 GMT+03:00 2014
 File.Version=1
 KeepUserPlacement=false
 Mcu.Family=STM32F1
@@ -42,57 +42,62 @@ Mcu.Pin27=PE9
 Mcu.Pin28=PE10
 Mcu.Pin29=PE11
 Mcu.Pin3=PE5
-Mcu.Pin30=PB10
-Mcu.Pin31=PB11
-Mcu.Pin32=PB14
-Mcu.Pin33=PB15
-Mcu.Pin34=PD8
-Mcu.Pin35=PD9
-Mcu.Pin36=PD10
-Mcu.Pin37=PD11
-Mcu.Pin38=PD12
-Mcu.Pin39=PD13
+Mcu.Pin30=PE12
+Mcu.Pin31=PE13
+Mcu.Pin32=PE14
+Mcu.Pin33=PE15
+Mcu.Pin34=PB10
+Mcu.Pin35=PB11
+Mcu.Pin36=PB12
+Mcu.Pin37=PB14
+Mcu.Pin38=PB15
+Mcu.Pin39=PD8
 Mcu.Pin4=PE6
-Mcu.Pin40=PD14
-Mcu.Pin41=PD15
-Mcu.Pin42=PC6
-Mcu.Pin43=PC7
-Mcu.Pin44=PC8
-Mcu.Pin45=PC9
-Mcu.Pin46=PA8
-Mcu.Pin47=PA9
-Mcu.Pin48=PA10
-Mcu.Pin49=PA11
+Mcu.Pin40=PD9
+Mcu.Pin41=PD10
+Mcu.Pin42=PD11
+Mcu.Pin43=PD12
+Mcu.Pin44=PD13
+Mcu.Pin45=PD14
+Mcu.Pin46=PD15
+Mcu.Pin47=PC6
+Mcu.Pin48=PC7
+Mcu.Pin49=PC8
 Mcu.Pin5=PC13-TAMPER-RTC
-Mcu.Pin50=PA12
-Mcu.Pin51=PA13
-Mcu.Pin52=PA14
-Mcu.Pin53=PA15
-Mcu.Pin54=PC10
-Mcu.Pin55=PC11
-Mcu.Pin56=PC12
-Mcu.Pin57=PD0
-Mcu.Pin58=PD1
-Mcu.Pin59=PD2
+Mcu.Pin50=PC9
+Mcu.Pin51=PA8
+Mcu.Pin52=PA9
+Mcu.Pin53=PA10
+Mcu.Pin54=PA11
+Mcu.Pin55=PA12
+Mcu.Pin56=PA13
+Mcu.Pin57=PA14
+Mcu.Pin58=PA15
+Mcu.Pin59=PC10
 Mcu.Pin6=PC14-OSC32_IN
-Mcu.Pin60=PD3
-Mcu.Pin61=PD4
-Mcu.Pin62=PD5
-Mcu.Pin63=PD6
-Mcu.Pin64=PD7
-Mcu.Pin65=PB3
-Mcu.Pin66=PB4
-Mcu.Pin67=PB5
-Mcu.Pin68=PB6
-Mcu.Pin69=PB7
+Mcu.Pin60=PC11
+Mcu.Pin61=PC12
+Mcu.Pin62=PD0
+Mcu.Pin63=PD1
+Mcu.Pin64=PD2
+Mcu.Pin65=PD3
+Mcu.Pin66=PD4
+Mcu.Pin67=PD5
+Mcu.Pin68=PD6
+Mcu.Pin69=PD7
 Mcu.Pin7=PC15-OSC32_OUT
-Mcu.Pin70=PB8
-Mcu.Pin71=PB9
-Mcu.Pin72=PE0
-Mcu.Pin73=PE1
+Mcu.Pin70=PB3
+Mcu.Pin71=PB4
+Mcu.Pin72=PB5
+Mcu.Pin73=PB6
+Mcu.Pin74=PB7
+Mcu.Pin75=PB8
+Mcu.Pin76=PB9
+Mcu.Pin77=PE0
+Mcu.Pin78=PE1
 Mcu.Pin8=PC0
 Mcu.Pin9=PC1
-Mcu.PinsNb=74
+Mcu.PinsNb=79
 Mcu.UserName=STM32F103VETx
 PA0-WKUP.GPIOParameters=GPIO_Label,GPIO_Mode
 PA0-WKUP.GPIO_Label=AIN 1
@@ -200,6 +205,12 @@ PB11.GPIO_Mode=
 PB11.GPIO_Speed=GPIO_Speed_2MHz
 PB11.Mode=Asynchronous
 PB11.Signal=USART3_RX
+PB12.GPIOParameters=GPIO_Speed,GPIO_Label,GPIO_Mode
+PB12.GPIO_Label=Drive5 , Enable
+PB12.GPIO_Mode=GPIO_Mode_Out_PP
+PB12.GPIO_Speed=GPIO_Speed_2MHz
+PB12.Locked=true
+PB12.Signal=GPIO_Output
 PB14.GPIOParameters=GPIO_Speed,GPIO_Label,GPIO_Mode
 PB14.GPIO_Label=USB Enable
 PB14.GPIO_Mode=GPIO_Mode_Out_PP
@@ -332,6 +343,62 @@ PC9.GPIO_Mode=GPIO_Mode_Out_PP
 PC9.GPIO_Speed=GPIO_Speed_2MHz
 PC9.Locked=true
 PC9.Signal=GPIO_Output
+PCC.Battery=Li-MnO2(CR2032)
+PCC.Battery.Capacity=225.0
+PCC.Battery.Compatibility=Yes
+PCC.Battery.InParallel=1
+PCC.Battery.InSeries=1
+PCC.Battery.MaxContinuous=3.0
+PCC.Battery.MaxPulseCurrent=15.0
+PCC.Battery.NominalVoltage=3.0
+PCC.Battery.SelfDischarge=0.12
+PCC.Family=STM32F4
+PCC.MCU=STM32F429Z(E-G-I)Tx
+PCC.MXVersion=4.4.0
+PCC.PartNumber=STM32F429ZITx
+PCC.Seq0=3
+PCC.Seq0.Step0.Average_Current=59.6 mA
+PCC.Seq0.Step0.CPU_Frequency=180.0 MHz
+PCC.Seq0.Step0.DMIPS=225.0
+PCC.Seq0.Step0.Duration=1 ms
+PCC.Seq0.Step0.Frequency=4.0 MHz
+PCC.Seq0.Step0.Memory=RAM/FLASH-ART_ON
+PCC.Seq0.Step0.Mode=RUN
+PCC.Seq0.Step0.Oscillator=HSE PLL_ON
+PCC.Seq0.Step0.Peripherals=CRC FMC GPIOA GPIOB GPIOC GPIOD GPIOE GPIOF GPIOG GPIOH TIM2 TIM3 TIM4 TIM5 USART1 USB_OTG_HS_ULPI WWDG
+PCC.Seq0.Step0.User's_Consumption=0 mA
+PCC.Seq0.Step0.Vcore=Scale1-High
+PCC.Seq0.Step0.Vdd=3.3
+PCC.Seq0.Step0.Voltage_Source=Vbus
+PCC.Seq0.Step1.Average_Current=59.6 mA
+PCC.Seq0.Step1.CPU_Frequency=180.0 MHz
+PCC.Seq0.Step1.DMIPS=225.0
+PCC.Seq0.Step1.Duration=100 ms
+PCC.Seq0.Step1.Frequency=4.0 MHz
+PCC.Seq0.Step1.Memory=RAM/FLASH-ART_ON
+PCC.Seq0.Step1.Mode=RUN
+PCC.Seq0.Step1.Oscillator=HSE PLL_ON
+PCC.Seq0.Step1.Peripherals=CRC FMC GPIOA GPIOB GPIOC GPIOD GPIOE GPIOF GPIOG GPIOH TIM2 TIM3 TIM4 TIM5 USART1 USB_OTG_HS_ULPI WWDG
+PCC.Seq0.Step1.User's_Consumption=0 mA
+PCC.Seq0.Step1.Vcore=Scale1-High
+PCC.Seq0.Step1.Vdd=3.3
+PCC.Seq0.Step1.Voltage_Source=Vbus
+PCC.Seq0.Step2.Average_Current=36.6 mA
+PCC.Seq0.Step2.CPU_Frequency=180.0 MHz
+PCC.Seq0.Step2.DMIPS=0.0
+PCC.Seq0.Step2.Duration=10 ms
+PCC.Seq0.Step2.Frequency=4.0 MHz
+PCC.Seq0.Step2.Memory=RAM/FLASH
+PCC.Seq0.Step2.Mode=SLEEP
+PCC.Seq0.Step2.Oscillator=HSE PLL_ON
+PCC.Seq0.Step2.Peripherals=CRC FMC GPIOA GPIOB GPIOC GPIOD GPIOE GPIOF GPIOG GPIOH TIM2 TIM3 TIM4 TIM5 USART1 USB_OTG_HS_ULPI WWDG
+PCC.Seq0.Step2.User's_Consumption=0 mA
+PCC.Seq0.Step2.Vcore=Scale1-High
+PCC.Seq0.Step2.Vdd=3.3
+PCC.Seq0.Step2.Voltage_Source=Vbus
+PCC.SubFamily=STM32F429/439
+PCC.Temperature=25
+PCC.Vdd=3.3
 PD0.GPIOParameters=GPIO_Speed,GPIO_Label,GPIO_Mode
 PD0.GPIO_Label=Drive 3, Step
 PD0.GPIO_Mode=GPIO_Mode_Out_PP
@@ -451,6 +518,30 @@ PE11.GPIO_Mode=GPIO_Mode_Out_PP
 PE11.GPIO_Speed=GPIO_Speed_2MHz
 PE11.Locked=true
 PE11.Signal=GPIO_Output
+PE12.GPIOParameters=GPIO_Speed,GPIO_Label,GPIO_Mode
+PE12.GPIO_Label=Drive 1, Enable
+PE12.GPIO_Mode=GPIO_Mode_Out_PP
+PE12.GPIO_Speed=GPIO_Speed_2MHz
+PE12.Locked=true
+PE12.Signal=GPIO_Output
+PE13.GPIOParameters=GPIO_Speed,GPIO_Label,GPIO_Mode
+PE13.GPIO_Label=Drive2 , Enable
+PE13.GPIO_Mode=GPIO_Mode_Out_PP
+PE13.GPIO_Speed=GPIO_Speed_2MHz
+PE13.Locked=true
+PE13.Signal=GPIO_Output
+PE14.GPIOParameters=GPIO_Speed,GPIO_Label,GPIO_Mode
+PE14.GPIO_Label=Drive 3, Enable
+PE14.GPIO_Mode=GPIO_Mode_Out_PP
+PE14.GPIO_Speed=GPIO_Speed_2MHz
+PE14.Locked=true
+PE14.Signal=GPIO_Output
+PE15.GPIOParameters=GPIO_Speed,GPIO_Label,GPIO_Mode
+PE15.GPIO_Label=Drive 4, Enable
+PE15.GPIO_Mode=GPIO_Mode_Out_PP
+PE15.GPIO_Speed=GPIO_Speed_2MHz
+PE15.Locked=true
+PE15.Signal=GPIO_Output
 PE2.GPIOParameters=GPIO_Speed,GPIO_Label,GPIO_Mode
 PE2.GPIO_Label=Drive 4, MS2
 PE2.GPIO_Mode=GPIO_Mode_Out_PP
